--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <!-- Profile Image -->
       <div class="profile-image">
-        <img src="./img/IMG_20220912_080505_323-removebg-preview.png" alt="profile-image">
+        <img class="responsive" src="./img/IMG_20220912_080505_323-removebg-preview.png" alt="profile-image">
       </div>
 
       <!-- My Story -->
